# bidding-engine

./: .env.example  .replit  Dockerfile  README.md  alembic.ini  bidding_engine.py  database.py  main.py  models.py  pyproject.toml  schemas.py  start_fastapi.sh
.github/workflows/: ci.yml  locust-performance.yml
attached_assets/: Pasted-Progress-since-last-pass-FastAPI-scaffold-main-py-Includes-CORS-healthz-and-a-sta-1747473733950.txt  Pasted-four-structural-areas-must-be-updated-to-satisfy-the-brief-1-Database-swap-Postgres-MySQL--1747479290211.txt
deploy/: openapi_export.py  openapi_v1.0.0.json  openapi_v1.0.0_summary.md
migrations/: env.py
migrations/versions/: d72ce3cc7d3f_initial_schema.py
models/: quality_model.json
routes/: __init__.py  bid.py  creatives.py  health.py  metrics.py  roas.py
scripts/: replay_test.py
static/: api-guide.html  index.html
static/admin/: index.html
tests/: test_importers.py  test_normalization.py  test_perf.py
tmp_clone/: .env  .replit  .replit.py  README.md  app.py  bidding_engine.py  direct_bidding_test.py  main.py  models.py  package-lock.json  package.json  proxy_bidding_api.js  pyproject.toml  run.py  run_bidding_system.py  start_fastapi.sh  start_server.sh  test_bidding.py  test_multi_model_bidding.py
tmp_clone/bid/: __init__.py  routes.py
tmp_clone/server/: routes.ts  storage.ts
tmp_clone/shared/: schema.ts
utils/: benchmarking.py  beta_posterior.py  normalize.py  observability.py  portfolio_optimizer.py  quality_factors.py  redis_cache.py  roas_predictor.py  xgboost_quality.py
(+25 files in other folders)
